# Snowplow2024

./: .gitignore  LICENSE  README.md  requirements.txt  rosinstall.sh  setup.sh
launch/: auto.launch.py  fqr.launch.py  jetson.launch.py  teleop.launch.py
src/HDC2460/: CMakeLists.txt  package.xml
src/HDC2460/include/HDC2460/: roboteq_hdc2460.hpp  utils.hpp
src/HDC2460/src/: roboteq_hdc2460.cpp
src/axle_manager/: package.xml  setup.cfg  setup.py
src/axle_manager/axle_manager/: hdc2460.py  hdc2460_node.py
src/axle_manager/config/: params.yaml
src/control_pkg/: package.xml  setup.cfg  setup.py
src/control_pkg/control_pkg/: auto.py  commands.py  drive_commands.py  fqr.py  path_auto.py  path_planning.py  turn_command.py  wait_commands.py
src/jetson_pkg/: package.xml  setup.cfg  setup.py
src/jetson_pkg/jetson_pkg/: apriltag_interpretation.py  apriltag_poses.json  jetson_apriltag.py
src/joy_conv/: package.xml  setup.cfg  setup.py
src/joy_conv/joy_conv/: joy_conv.py
src/obstacle_detection/: CMakeLists.txt  package.xml  setup.py
src/obstacle_detection/include/: obstacle_detector.h  obstacle_visualizer.h  scans_merger.h
src/obstacle_detection/msg/: Obstacles.msg
src/obstacle_detection/obstacle_detection/: circle.py  figure_fitting.py  obstacle_detector.py  point.py  segment.py
src/obstacle_detection/src/: obstacle_detector.cpp  obstacle_visualizer.cpp
src/sensors_pkg/: package.xml  setup.py
src/sensors_pkg/sensors_pkg/: hardware_node.py  imu.py
src/utilities/: package.xml  setup.py
src/utilities/utilities/: tools.py
